--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-asgiref==3.8.1
 bcrypt==3.2.0
 certifi==2020.6.20
 chardet==4.0.0
 click==8.0.3
-Django==4.2.7             # or your exact version
+Django==4.2.7
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 gunicorn==23.0.0
@@ -12,7 +11,7 @@ python-dateutil==2.8.1
 python-dotenv==0.19.2
 PyJWT==2.3.0
 pytz==2022.1
-requests==2.25.1
+requests==2.31.0
 setuptools>=65.5.0
 sqlparse==0.5.3
 urllib3==1.26.5
